// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`desktop when showGetInTouch is false renders the expected classes 1`] = `
.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
}

.c3 {
  position: relative;
  display: inline-block;
}

.c3 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c3 svg:hover path,
.c3 svg:active path,
.c3 svg:focus path {
  fill: #68737d;
}

.c3 svg path {
  fill: #87929d;
}

.c1 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c2 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="c1"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <label
          class="c2 text__c-txt__label___3wMPZ "
          data-garden-container-id="containers.field"
          data-garden-container-version="1.3.3"
          data-garden-id="forms.text_label"
          data-garden-version="7.1.10"
          for="1val-field_1.3.3--input"
          id="1val-field_1.3.3--label"
        >
          Type your question here...
        </label>
        <textarea
          aria-describedby="1val-field_1.3.3--hint"
          aria-invalid="false"
          aria-labelledby="1val-field_1.3.3--label"
          class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
          data-garden-id="forms.textarea"
          data-garden-version="7.1.10"
          data-testid="message-field"
          id="1val-field_1.3.3--input"
          name="answerBotInputValue"
          placeholder="Type your question here..."
          rows="3"
        >
          desktop message
        </textarea>
      </div>
    </div>
    <div
      class="logoDesktop"
    >
      <a
        class="c3"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
  </footer>
</div>
`;

exports[`desktop when showGetInTouch is true renders the expected classes 1`] = `
.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
}

.c6 {
  position: relative;
  display: inline-block;
}

.c6 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c6 svg:hover path,
.c6 svg:active path,
.c6 svg:focus path {
  fill: #68737d;
}

.c6 svg path {
  fill: #87929d;
}

.c3.c3.c3 {
  background-color: transparent !important;
  color: #1F73B7 !important;
  border-color: #1F73B7 !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c3.c3.c3:not([disabled]):hover,
.c3.c3.c3:not([disabled]):active,
.c3.c3.c3:not([disabled]):focus {
  color: #FFFFFF !important;
  background-color: #1F73B7 !important;
  border-color: #1F73B7 !important;
}

.c4 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c5 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  height: 2.2857142857142856rem;
  margin-bottom: 0.7142857142857143rem;
}

.c2.c2.c2.c2 {
  height: 2.2857142857142856rem !important;
  line-height: 1 !important;
  font-size: 1rem !important;
  position: absolute;
}

[dir='ltr'] .c2.c2.c2.c2 {
  right: 0;
}

[dir='rtl'] .c2.c2.c2.c2 {
  left: 0;
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="slideAppear"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 0; bottom: -10px;"
    >
      <div
        class="c1"
      >
        <button
          class="c2 c3 index__c-btn___3y2Qe "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.button"
          data-garden-version="7.1.10"
          data-testid="pill-button"
          tabindex="0"
          type="button"
        >
          Get in touch
        </button>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="text__c-txt___Uzv-G range__c-range___1aYaS "
      >
        <label
          class="c5 text__c-txt__label___3wMPZ "
          data-garden-container-id="containers.field"
          data-garden-container-version="1.3.3"
          data-garden-id="forms.text_label"
          data-garden-version="7.1.10"
          for="3val-field_1.3.3--input"
          id="3val-field_1.3.3--label"
        >
          Type your question here...
        </label>
        <textarea
          aria-describedby="3val-field_1.3.3--hint"
          aria-invalid="false"
          aria-labelledby="3val-field_1.3.3--label"
          class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
          data-garden-id="forms.textarea"
          data-garden-version="7.1.10"
          data-testid="message-field"
          id="3val-field_1.3.3--input"
          name="answerBotInputValue"
          placeholder="Type your question here..."
          rows="3"
        >
          desktop message
        </textarea>
      </div>
    </div>
    <div
      class="logoDesktop"
    >
      <a
        class="c6"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
  </footer>
</div>
`;

exports[`mobile when showGetInTouch is false renders the expected classes 1`] = `
.c0 {
  padding: 0;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c1 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c1 svg:hover path,
.c1 svg:active path,
.c1 svg:focus path {
  fill: #68737d;
}

.c1 svg path {
  fill: #87929d;
}

.c2 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c3 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="logoMobile"
    >
      <a
        class="c1"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
    <div
      class="containerMobile"
    >
      <div
        class="inputContainerMobile"
      >
        <div
          class="c2"
        >
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="c3 text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="4val-field_1.3.3--input"
              id="4val-field_1.3.3--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-describedby="4val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="4val-field_1.3.3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.1.10"
              data-testid="message-field"
              id="4val-field_1.3.3--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="1"
            >
              mobile message
            </textarea>
          </div>
        </div>
      </div>
      <button
        aria-label="Send"
        class="button iconSendAnswerBotMobile button iconSendAnswerBotMobile index__c-btn--icon___1Yl4x index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
        data-garden-container-id="containers.keyboardfocus"
        data-garden-container-version="0.4.4"
        data-garden-id="buttons.icon_button"
        data-garden-version="7.1.10"
        tabindex="0"
        type="button"
      >
        <span
          class="container Icon--sendChat"
          data-testid="Icon--sendChat"
          type="Icon--sendChat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_sendChat.svg"
          />
        </span>
      </button>
    </div>
  </footer>
</div>
`;

exports[`mobile when showGetInTouch is true renders the expected classes 1`] = `
.c0 {
  padding: 0;
}

.c4 {
  position: relative;
  display: inline-block;
}

.c4 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c4 svg:hover path,
.c4 svg:active path,
.c4 svg:focus path {
  fill: #68737d;
}

.c4 svg path {
  fill: #87929d;
}

.c3.c3.c3 {
  background-color: transparent !important;
  color: #1F73B7 !important;
  border-color: #1F73B7 !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c3.c3.c3:not([disabled]):hover,
.c3.c3.c3:not([disabled]):active,
.c3.c3.c3:not([disabled]):focus {
  color: #FFFFFF !important;
  background-color: #1F73B7 !important;
  border-color: #1F73B7 !important;
}

.c5 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c6 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  height: 2.2857142857142856rem;
  margin-bottom: 0.7142857142857143rem;
}

.c2.c2.c2.c2 {
  height: 2.2857142857142856rem !important;
  line-height: 1 !important;
  font-size: 1rem !important;
  position: absolute;
}

[dir='ltr'] .c2.c2.c2.c2 {
  right: 0;
}

[dir='rtl'] .c2.c2.c2.c2 {
  left: 0;
}

<div>
  <footer
    class="footer c0"
  >
    <div
      class="slideAppear slideAppearMobile"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 0; bottom: -10px;"
    >
      <div
        class="c1"
      >
        <button
          class="c2 c3 index__c-btn___3y2Qe "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.button"
          data-garden-version="7.1.10"
          data-testid="pill-button"
          tabindex="0"
          type="button"
        >
          Get in touch
        </button>
      </div>
    </div>
    <div
      class="logoMobile"
    >
      <a
        class="c4"
        data-testid="Icon--zendesk"
        href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
        tabindex="-1"
        target="_blank"
      >
        <svg
          realfilename="widget-icon_zendesk.svg"
          title="zendesk"
        />
      </a>
    </div>
    <div
      class="containerMobile"
    >
      <div
        class="inputContainerMobile"
      >
        <div
          class="c5"
        >
          <div
            class="text__c-txt___Uzv-G range__c-range___1aYaS "
          >
            <label
              class="c6 text__c-txt__label___3wMPZ "
              data-garden-container-id="containers.field"
              data-garden-container-version="1.3.3"
              data-garden-id="forms.text_label"
              data-garden-version="7.1.10"
              for="6val-field_1.3.3--input"
              id="6val-field_1.3.3--label"
            >
              Type your question here...
            </label>
            <textarea
              aria-describedby="6val-field_1.3.3--hint"
              aria-invalid="false"
              aria-labelledby="6val-field_1.3.3--label"
              class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
              data-garden-id="forms.textarea"
              data-garden-version="7.1.10"
              data-testid="message-field"
              id="6val-field_1.3.3--input"
              name="answerBotInputValue"
              placeholder="Type your question here..."
              rows="1"
            >
              mobile message
            </textarea>
          </div>
        </div>
      </div>
      <button
        aria-label="Send"
        class="button iconSendAnswerBotMobile button iconSendAnswerBotMobile index__c-btn--icon___1Yl4x index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--pill___QYWDJ index__c-btn--lg___33IF1 "
        data-garden-container-id="containers.keyboardfocus"
        data-garden-container-version="0.4.4"
        data-garden-id="buttons.icon_button"
        data-garden-version="7.1.10"
        tabindex="0"
        type="button"
      >
        <span
          class="container Icon--sendChat"
          data-testid="Icon--sendChat"
          type="Icon--sendChat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_sendChat.svg"
          />
        </span>
      </button>
    </div>
  </footer>
</div>
`;
